Changelog for Articles.

Articles 1.1.5
===============================
- [#6342] Fix issue where container content was not persistent

Articles 1.1.2/3/4
===============================
- Better handling of comment import and MODX tags in WordPress import
- More WordPress import fixes with character encodings
- [#6339] Fix import from WordPress because WordPress does not escape brackets properly from export WXR file

Articles 1.1.1
===============================
- [#6305] Rearrange TV processing advanced settings to address possible clarity issue
- [#6303] Fix issue where some settings do not set dirty status for container form when changed
- [#6324] Fix issue where import from MODX sets isfolder incorrectly
- Ensure MODX import changes Resources to new ArticlesContainer template
- Add &includeTVsList and &processTVsList advanced settings for listings
- Upgrade getResources to 1.4.2 and getPage to 1.2.2

Articles 1.1.0
===============================
- Add import from MODX
- Add import from Blogger
- Add ability to specify file on server when importing from WordPress
- [#6296] Add sortBy and sortDir settings for getResources to the Advanced Settings tab for containers
- [#6299] Ensure that if author of Article is deleted, article can still be viewed/edited

Articles 1.0.2
===============================
- Add ability to filter by author on articles
- Vastly improve loading speeds and caching for main articles page
- Add more options for getPage to container settings

Articles 1.0.1
===============================
- Add ability to toggle including and processing of TVs on archive listing pages
- Include new Archivist parameters, &groupByYear and &groupByYearTpl
- [#6252] Fix paging on articles main list page

Articles 1.0.0
===============================
- [#6201] Add ability to import posts+comments from WordPress
- [#6167] Fix issue where unpublished new articles were not showing in grid
- Allow search on articles grid to search tags