@@ -3,6 +3,7 @@ Changelog for Articles.
 Articles 1.1.5
 ===============================
 - [#6342] Fix issue where container content was not persistent
+- [#6346] Add missing IDs to various panels in Articles UI to allow for Form Customization targeting
 
 Articles 1.1.2/3/4
 ===============================
